# p1-starting-an-api-0NATE4

./: .gitignore  README.md  endpoints.http  pyproject.toml
todo/views/: routes.py
