[project]
name = "p1-starting-an-api-0nate4"
version = "0.1.0"
description = ""
authors = [
    {name = "Nathan Chung",email = "navini2004@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
